Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added hooks for the setup tool.
Bug fixes:
~~~~~~~~~~
- Improved CMFInstaller docstrings.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-